--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#317EFB",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "settings_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "settings_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png",
       "sizes": "512x512",
       "type": "image/png"
     }
