--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "My PWA App",
   "short_name": "PWA",
-  "start_url": "./",
+  "start_url": "/testInstall/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#317EFB",
